# Moonfin-Client-Core

./: README.md  build-linux.sh  firebase.json  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  native_game_jni.c
ios/Runner/: GoogleService-Info.plist  Info.plist  RunnerRelease.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase_options.dart  main.dart
lib/background/: watch_next_background.dart
lib/di/: injection.dart
lib/l10n/: app_af.arb  app_ar.arb  app_be.arb  app_bg.arb  app_bn.arb  app_ca.arb  app_cy.arb  app_da.arb  app_de.arb  app_el.arb  app_en-GB.arb  app_en.arb  app_en_GB.arb  app_eo.arb  app_es.arb  app_es_419.arb  app_es_AR.arb  app_es_DO.arb  app_es_MX.arb  app_et.arb  app_fa.arb  app_fr.arb  app_gl.arb  app_he.arb  app_hi.arb  app_hr.arb  app_hu.arb  app_id.arb  app_it.arb  app_ja.arb  app_kk.arb  app_kn.arb  app_ko.arb  app_localizations.dart  app_localizations_af.dart  app_localizations_ar.dart  app_localizations_be.dart  app_localizations_bg.dart  app_localizations_bn.dart  app_localizations_ca.dart  (+83 more)
lib/playback/: appletv_mpv_backend.dart  audio_capability_profile.dart  device_profile_builder.dart  headless_session_bootstrap.dart  html_video_backend_profile.dart  html_video_backend_web.dart  known_defects.dart  media3_player_backend.dart  media_kit_player_backend.dart  native_game_player.dart  playback_lifecycle_handler.dart  sleep_timer_controller.dart
lib/preference/: preference_constants.dart  seerr_preferences.dart  user_preferences.dart
lib/util/: game_core_licenses.dart  game_cores.dart  platform_detection.dart
macos/Runner.xcodeproj/: project.pbxproj
native/libretro_host/: CMakeLists.txt  libretro_host.c  libretro_host.podspec
native/libretro_host/test/: stub_core.c
patches/: kindle_unpack-0.1.1-archive4.patch
tvos/: Podfile
tvos/Runner.xcodeproj/: project.pbxproj
(+138 files in other folders)
